--- a/GoodFood/Base.lproj/Main.storyboard
+++ b/GoodFood/Base.lproj/Main.storyboard
@@ -424,28 +424,10 @@
                                 <color key="textColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GnQ-FP-s5R">
-                                <rect key="frame" x="289" y="607" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button">
-                                    <color key="titleColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="btnPopView:" destination="M2P-sN-d7H" eventType="touchUpInside" id="8yP-gN-E1u"/>
-                                </connections>
-                            </button>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="cRo-aA-SRF">
-                                <rect key="frame" x="95" y="664" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GQw-QJ-9GS">
-                                <rect key="frame" x="81" y="607" width="77" height="28"/>
+                                <rect key="frame" x="159" y="678" width="107" height="28"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <state key="normal" title="placeOrder">
                                     <color key="titleColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
@@ -460,7 +442,6 @@
                     <navigationItem key="navigationItem" id="5cW-HN-Tw6"/>
                     <connections>
                         <outlet property="cartTable" destination="jGD-Xh-SgV" id="4IU-hr-fM5"/>
-                        <outlet property="detailstext" destination="cRo-aA-SRF" id="e2K-tA-BIa"/>
                         <outlet property="totalCost" destination="R3T-NP-aeN" id="40b-i7-hPx"/>
                     </connections>
                 </viewController>
@@ -487,7 +468,8 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="amF-kr-rM5">
                                         <rect key="frame" x="35" y="215" width="71" height="33"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="71" id="ZQc-KG-LZa"/>
+                                            <constraint firstAttribute="width" constant="71" id="LQR-eH-66j"/>
+                                            <constraint firstAttribute="height" constant="33" id="Pvk-ae-Z75"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <state key="normal" title="Get Otp"/>
@@ -516,8 +498,11 @@
                                             <action selector="btnpay:" destination="eZD-By-N3E" eventType="touchUpInside" id="wlq-Gd-Ccc"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tGO-t1-hfR">
-                                        <rect key="frame" x="190" y="217" width="69" height="30"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tGO-t1-hfR">
+                                        <rect key="frame" x="190" y="217" width="95" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="95" id="3Dp-lB-13y"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <state key="normal" title="submit otp"/>
                                         <connections>
@@ -527,19 +512,22 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstItem="5jK-4U-CQk" firstAttribute="trailing" secondItem="Gcd-lb-rtf" secondAttribute="trailing" id="0XE-iO-dhu"/>
-                                    <constraint firstAttribute="bottom" secondItem="ROY-A5-yoA" secondAttribute="bottom" constant="54" id="4eF-6v-0AR"/>
-                                    <constraint firstItem="5jK-4U-CQk" firstAttribute="leading" secondItem="Gcd-lb-rtf" secondAttribute="leading" id="EiU-8F-CBQ"/>
-                                    <constraint firstAttribute="trailing" secondItem="od7-GM-smF" secondAttribute="trailing" constant="59" id="GX7-Lb-OTu"/>
-                                    <constraint firstItem="amF-kr-rM5" firstAttribute="leading" secondItem="gm7-hr-YIi" secondAttribute="leading" constant="35" id="UT8-fj-2YI"/>
-                                    <constraint firstItem="ROY-A5-yoA" firstAttribute="centerX" secondItem="gm7-hr-YIi" secondAttribute="centerX" id="d2e-RG-u98"/>
-                                    <constraint firstAttribute="centerX" secondItem="tGO-t1-hfR" secondAttribute="centerX" constant="-66" id="gBK-Dj-9d6"/>
-                                    <constraint firstItem="amF-kr-rM5" firstAttribute="baseline" secondItem="od7-GM-smF" secondAttribute="baseline" id="gTT-2B-N4K"/>
-                                    <constraint firstItem="Gcd-lb-rtf" firstAttribute="top" secondItem="5jK-4U-CQk" secondAttribute="bottom" constant="37" id="hzC-u4-5Xg"/>
-                                    <constraint firstItem="amF-kr-rM5" firstAttribute="top" secondItem="Gcd-lb-rtf" secondAttribute="bottom" constant="73" id="otw-dM-vGD"/>
-                                    <constraint firstItem="5jK-4U-CQk" firstAttribute="top" secondItem="gm7-hr-YIi" secondAttribute="top" constant="37" id="q1k-rw-FTB"/>
-                                    <constraint firstItem="5jK-4U-CQk" firstAttribute="leading" secondItem="gm7-hr-YIi" secondAttribute="leading" constant="25" id="qsI-sN-2pw"/>
-                                    <constraint firstItem="Gcd-lb-rtf" firstAttribute="centerX" secondItem="ROY-A5-yoA" secondAttribute="centerX" id="v7P-hY-JjS"/>
+                                    <constraint firstItem="Gcd-lb-rtf" firstAttribute="top" secondItem="5jK-4U-CQk" secondAttribute="bottom" constant="37" id="8i9-De-I3J"/>
+                                    <constraint firstItem="amF-kr-rM5" firstAttribute="top" secondItem="Gcd-lb-rtf" secondAttribute="bottom" constant="73" id="CFk-9X-HxQ"/>
+                                    <constraint firstItem="5jK-4U-CQk" firstAttribute="top" secondItem="gm7-hr-YIi" secondAttribute="top" constant="37" id="CWt-KJ-e3F"/>
+                                    <constraint firstItem="amF-kr-rM5" firstAttribute="centerY" secondItem="tGO-t1-hfR" secondAttribute="centerY" id="LeM-0K-Dxc"/>
+                                    <constraint firstItem="od7-GM-smF" firstAttribute="centerX" secondItem="gm7-hr-YIi" secondAttribute="centerX" id="SJE-iK-PI6"/>
+                                    <constraint firstItem="5jK-4U-CQk" firstAttribute="leading" secondItem="gm7-hr-YIi" secondAttribute="leading" constant="25" id="UX0-fb-oDy"/>
+                                    <constraint firstItem="tGO-t1-hfR" firstAttribute="top" secondItem="Gcd-lb-rtf" secondAttribute="bottom" constant="75" id="WB0-Kx-hJR"/>
+                                    <constraint firstItem="5jK-4U-CQk" firstAttribute="trailing" secondItem="Gcd-lb-rtf" secondAttribute="trailing" id="aLx-kd-ts5"/>
+                                    <constraint firstAttribute="trailing" secondItem="tGO-t1-hfR" secondAttribute="trailing" constant="32" id="b9M-sq-LoT"/>
+                                    <constraint firstItem="Gcd-lb-rtf" firstAttribute="centerX" secondItem="od7-GM-smF" secondAttribute="centerX" id="cPW-Yd-25S"/>
+                                    <constraint firstItem="5jK-4U-CQk" firstAttribute="leading" secondItem="Gcd-lb-rtf" secondAttribute="leading" id="dgZ-rA-arF"/>
+                                    <constraint firstItem="od7-GM-smF" firstAttribute="centerX" secondItem="ROY-A5-yoA" secondAttribute="centerX" id="gUb-zy-pYz"/>
+                                    <constraint firstItem="amF-kr-rM5" firstAttribute="leading" secondItem="gm7-hr-YIi" secondAttribute="leading" constant="35" id="hXV-ZG-tfY"/>
+                                    <constraint firstItem="ROY-A5-yoA" firstAttribute="top" secondItem="od7-GM-smF" secondAttribute="bottom" constant="32" id="hg4-gb-B1S"/>
+                                    <constraint firstItem="tGO-t1-hfR" firstAttribute="leading" secondItem="amF-kr-rM5" secondAttribute="trailing" constant="84" id="nL0-1h-IVJ"/>
+                                    <constraint firstAttribute="bottom" secondItem="ROY-A5-yoA" secondAttribute="bottom" constant="16" id="tg8-TW-rna"/>
                                 </constraints>
                             </view>
                         </subviews>
