--- a/GoodFood/Base.lproj/Main.storyboard
+++ b/GoodFood/Base.lproj/Main.storyboard
@@ -58,7 +58,7 @@
                                 <rect key="frame" x="87" y="143" width="240" height="215"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="CSY-wh-joo" firstAttribute="top" secondItem="iW6-bX-Gi7" secondAttribute="bottom" constant="58" id="3fz-Or-t8W"/>
                             <constraint firstItem="iW6-bX-Gi7" firstAttribute="leading" secondItem="CSY-wh-joo" secondAttribute="leading" id="5FM-Fg-duG"/>
@@ -80,7 +80,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="NHb-nR-FUM">
                         <barButtonItem key="rightBarButtonItem" title="Sign Up" id="8Vf-fo-c2A">
-                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="tintColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
                                 <segue destination="R0e-XP-MPf" kind="show" id="eEu-0r-cD8"/>
                             </connections>
@@ -88,6 +88,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="logBtnLbl" destination="1xU-pP-Oys" id="7Lg-g0-gxg"/>
+                        <outlet property="signUpBtn" destination="8Vf-fo-c2A" id="7XF-iu-qIT"/>
                         <outlet property="switchRememberme" destination="uC3-HJ-hwx" id="SOh-Fz-6cE"/>
                         <outlet property="txtUsername" destination="e5X-bU-ERk" id="5MZ-nP-5TW"/>
                         <outlet property="txtpassword" destination="iW6-bX-Gi7" id="BQt-Dq-nzF"/>
@@ -481,7 +482,7 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ROY-A5-yoA">
-                                        <rect key="frame" x="131" y="351" width="54" height="33"/>
+                                        <rect key="frame" x="131.5" y="351" width="54" height="33"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <state key="normal" title="cancel"/>
                                         <connections>
@@ -489,7 +490,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="od7-GM-smF">
-                                        <rect key="frame" x="143" y="286" width="30" height="33"/>
+                                        <rect key="frame" x="143.5" y="286" width="30" height="33"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <state key="normal" title="Pay"/>
                                         <connections>
@@ -801,14 +802,14 @@
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="restOrderCell" id="uW5-pS-Ya0" customClass="restOrderViewCell" customModule="GoodFood" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="374" height="43"/>
+                                        <rect key="frame" x="0.0" y="28" width="374" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uW5-pS-Ya0" id="i8S-sQ-fAZ">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9YH-wY-XXa">
-                                                    <rect key="frame" x="31" y="0.0" width="182" height="21"/>
+                                                    <rect key="frame" x="31" y="0.0" width="182" height="21.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="182" id="Uww-1v-uWE"/>
                                                     </constraints>
@@ -817,7 +818,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UHh-Te-lSl">
-                                                    <rect key="frame" x="221" y="11" width="117" height="21"/>
+                                                    <rect key="frame" x="221" y="11" width="117" height="21.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="117" id="0QL-LK-NtA"/>
                                                     </constraints>
